# cpsplines

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  Makefile  README.md  dasf.py  env.yml  make.bat  pyproject.toml  requirements.txt  setup.py
.github/workflows/: autoblack.yml  autoruff.yml  mypy.yml  test.yml
cpsplines/fittings/: fit_cpsplines.py  grid_cpsplines.py
cpsplines/graphics/: plot_curves.py  plot_one_smoothing.py  plot_surfaces.py  plot_utils.py
cpsplines/mosek_functions/: interval_constraints.py  obj_function.py  pdf_constraints.py  point_constraints.py  utils_mosek.py
cpsplines/psplines/: bspline_basis.py  penalty_matrix.py
cpsplines/utils/: box_product.py  cholesky_semidefinite.py  clean_data_covid.py  fast_kron.py  gcv.py  irls.py  normalize_data.py  rearrange_data.py  simulator_grid_search.py  simulator_optimize.py  timer.py  weighted_b.py
data/: covid_aragon_1D.csv  ethanol.csv  kyphosis.csv  provinces_es.csv
examples/: covid_data.ipynb  gaussian_data.ipynb  non_gaussian_data.ipynb  simulated_data.ipynb
notebooks/: covid_data.ipynb  non_gaussian_data.ipynb
src/cpsplines/fittings/: fit_cpsplines.py
src/cpsplines/graphics/: plot_curves.py  plot_surfaces.py
src/cpsplines/mosek_functions/: interval_constraints.py  obj_function.py  pdf_constraints.py  point_constraints.py
src/cpsplines/psplines/: bspline_basis.py  penalty_matrix.py
src/cpsplines/utils/: box_product.py  clean_data_covid.py  fast_kron.py  gcv.py  irls.py  normalize_data.py  rearrange_data.py  simulator_grid_search.py  simulator_optimize.py  timer.py  weighted_b.py
template/fittings/: adaptive_1D.py  grid_cpsplines.py
template/graphics/: boxplot.py  plot_one_smoothing.py  plot_utils.py
template/mosek_functions/: interval_constraints.py  obj_function.py  point_constraints.py  utils_mosek.py
template/psplines/: bspline.py  bspline_basis.py  penalty_matrix.py  penaltymat.py
template/smoothings/: one_smoothing.py
template/utils/: cholesky_semidefinite.py  clean_data_covid.py  fast_forecast_mat.py  fast_kron.py  gcv.py  normalize_data.py  simulator_grid_search.py  simulator_optimize.py  timer.py  weighted_b.py
tests/: test_b_matrix.py  test_box_product.py  test_d_matrix.py  test_forecast_mat.py  test_gcv.py  test_irls.py  test_kron.py  test_normalizer.py  test_penalization.py  test_rearrange_data.py  test_s_matrices.py  test_sol.py  test_solution.py  test_vec_prod_kronecker.py  test_w_matrices.py  test_weighted_b.py
tests_mosek/: test_solution.py
