[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cpsplines"
version = "0.3.0"
description = "Constrained P-splines"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Manuel Navarro García", email = "manuelnavarrogithub@gmail.com" },
]
keywords = ["P-splines", "MOSEK", "Python 3.13", "Constraints", "Optimization"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "joblib",
    "matplotlib",
    "mosek",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
]

[dependency-groups]
dev = [
    "colorama",
    "complexipy",
    "coverage",
    "ipykernel",
    "mypy",
    "pip",
    "pip-audit",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ManuelNavarroGarcia/cpsplines/"
Repository = "https://github.com/ManuelNavarroGarcia/cpsplines/"
Download = "https://github.com/ManuelNavarroGarcia/cpsplines/archive/refs/tags/0.3.0.tar.gz"

[project.scripts]
main = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C4",
    "PTH",
    "A",
    "RET",
    "PLW",
    "PLE",
    "PERF",
    "SLF",
    "PD",
]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-z_A-Z0-9_]*[a-z_A-Z0-9_]+?))$"

[tool.ruff.lint.mccabe]

max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D401"]
"tests/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
warn_unreachable = true
ignore_missing_imports = true
python_version = "2"
warn_return_any = true
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers", "--color=yes"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
